[gd_scene load_steps=5 format=3 uid="uid://grqf1rf4rqa1"]

[ext_resource type="Script" path="res://Cars/car.gd" id="1_bx7ue"]
[ext_resource type="Texture2D" uid="uid://due506oku3fib" path="res://assets/Cars/car_black_1.png" id="2_hysio"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yms62"]
radius = 33.0
height = 128.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4kjlx"]
particle_flag_disable_z = true
gravity = Vector3(0, 98, 0)
scale_min = 4.0
scale_max = 5.0

[node name="Car" type="CharacterBody2D"]
position = Vector2(555, 336)
script = ExtResource("1_bx7ue")
traction_fast = 0.9

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("2_hysio")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_yms62")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="SpeedBoostTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="DriftGPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_4kjlx")

[connection signal="timeout" from="SpeedBoostTimer" to="." method="_on_speed_boost_timer_timeout"]
